--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -36,9 +37,11 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-datepicker": "^1.1.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
     "redux-thunk": "^2.2.0",
