--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "halogenium": "^2.2.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.5",
@@ -114,7 +115,8 @@
       "import/prefer-default-export": 0,
       "react/no-unused-prop-types": 0,
       "no-underscore-dangle": 0,
-      "no-confusing-arrow": 0
+      "no-confusing-arrow": 0,
+      "object-curly-newline": 0
     }
   }
 }
