--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "./scripts/start.sh",
+    "startDev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
